# topologytools

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/topologytools/: homology.py  topology.py  utils.py
